# autotp-platform

./: README-DEPLOY.md  README-TESTING.md  README.md  build-with-nightly.sh  deploy-prebuilt.sh  deploy-to-devnet.sh  eslint.config.mjs  fix-solana-build.sh  monitor-app.sh  package-lock.json  package.json  start-app.sh  test-functionality.sh  transaction-test.sh  update-program-id.sh  verify-program.sh  wallet.md
anchor/: Anchor.toml  Cargo.toml  README.md  better-build.sh  buffer-keypair.json  deploy-custom.sh  deploy-local.sh  deploy-manual.sh  deploy-with-keypair.sh  deploy.sh  fix-build.sh  program-keypair.json  quick-deploy.sh  verify-program.sh
anchor/programs/anchor/: Cargo.toml  Cargo.toml.bak
anchor/programs/anchor/src/: lib.rs
anchor/programs/autotp/: Cargo.toml  DEV-GUIDE.md
anchor/programs/autotp/src/: lib.rs  mock-service.js  test-client.js
anchor/tests/: anchor.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/autotp/: page.tsx
src/app/backgrounds/: layout.tsx  page.tsx
src/app/counter/: page.tsx
src/components/: AceternityBackgroundDemo.tsx  BackgroundDecoration.tsx  ConnectButton.tsx  DevModeToggle.tsx  FeatureCarousel.tsx  GridTest.tsx  KeyboardNavigation.tsx  Logo.tsx  MobileAdaptation.css  OrdersTable.tsx  ReferralLinkCreator.tsx  Slider.tsx  SlippageDialog.tsx  Snackbar.tsx  StatusLine.tsx  TakeProfitCard.tsx  TokenPriceChart.tsx  TokenSelector.tsx  VaultDoorAnimation.tsx  app-footer.tsx  app-header.tsx  app-layout.tsx
src/components/account/: account-detail-feature.tsx  account-list-feature.tsx
src/components/counter/: counter-data-access.tsx  counter-feature.tsx  counter-ui.tsx
src/components/solana/: solana-provider.tsx
src/components/ui/: backgrounds.tsx  dot-background.tsx  grid-background.tsx  pagination.tsx
src/idl/: autotp.json  autotp.ts  index.ts  types.ts
src/lib/: auto-tp-program.ts  autotp.ts  referral-service.ts  solana.ts  token-metadata.ts  wallet-provider.tsx
src/lib/hooks/: types.ts
