[package]
name = "autotp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "autotp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", default-features = false, features = ["token", "associated_token", "metadata"] }
solana-program = "=1.16.13"
zeroize = "=1.3.0"
