[package]
name = "autotp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "autotp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
# Explicitly specify the token feature to avoid pulling in token-2022
anchor-spl = { version = "0.27.0", default-features = false, features = ["token"] }
solana-program = "=1.14.17"
zeroize = "=1.3.0"