[package]
name = "autotp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "autotp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
solana-program = "=1.14.17"

# Add specific optimization flags for Solana BPF programs
[profile.release]
overflow-checks = true     # Enable integer overflow checks.
lto = "fat"                # Link-time-optimization - aggressive whole program optimization
codegen-units = 1          # Use a single codegen unit to enable better optimizations
panic = "abort"            # Abort on panic
opt-level = 3              # Highest level of optimization
rpath = false              # Disable rpath
debug = false              # No debug symbols
debug-assertions = false   # No debug assertions